# towerengine

./: .appveyor.yml  .appveyor_rsa.ppk.enc  .cproject  .gitignore  .project  .travis.yml  .travis_rsa.enc  CMakeLists.txt  Makefile  README.md  cmake_uninstall.cmake.in  resources  towerengine-config.cmake  towerengine-config.cmake.in
.externalToolBuilders/: stringres (sources).launch
blender/: .gitignore  CMakeLists.txt  Material.py  Mesh.py  TowerEngineExporter.py  TowerEngineMeshExporter.py  TowerEngineProperties.py  TowerEngineSceneExporter.py  VertexArrayExporter.py  __init__.py  export_material.py  mesh_converter.py  mesh_exporter.py  props.py  renderer.py  scene_exporter.py  ui.py  utils.py  viewport_render.py
cmake/: FindGLFW.cmake  ResourceGenerator.cmake  ResourceGenerator_header.h.in  ResourceGenerator_source.cpp.in  Utils.cmake
cmake/modules/: FindOpenVR.cmake
examples/: CMakeLists.txt
examples/assets/: cube.tes  simple.tes  vr.tes
examples/assets/cube.tes_assets/: Cube.tem
examples/assets/meshes/: Cube.tem  Plane.tem  SmallCube.tem
examples/cube/: CMakeLists.txt  cube.cpp
examples/simple/: CMakeLists.txt  simple.cpp
examples/simple_forward/: CMakeLists.txt  simple_forward.cpp
examples/vrdemo/: CMakeLists.txt  common.h  vrcontroller.cpp  vrcontroller.h  vrdemo.cpp  vrplayer.cpp  vrplayer.h
include/: 2d_renderer.h  2d_sprite_shader.h  _towerengine.h  aabb.h  ambient_lighting_shader.h  animation.h  asset.h  boundingbox.h  buffers.h  bullet_debug_object.h  camera.h  character_controller.h  color_shader.h  comparable.h  cube_env_shader.h  cube_map_blur_shader.h  cube_map_reflection.h  cube_map_reflection_shader.h  culling.h  default_deferred_renderer.h  default_face_shader.h  default_forward_renderer.h  default_renderer.h  deferred_renderer.h  depth_pass_shader.h  directional_light.h  directional_light_shader.h  directional_light_shadow.h  directional_lighting_shader.h  directional_shadow_shader.h  engine.h  entity.h  envmap.h  face_shader.h  fog_shader.h  forward_renderer.h  gbuffer.h  geometry_pass_shader.h  heightmap.h  includes.h  (+66 more)
lib/: libtowerengine.so.1  libtowerengine.so.1.0.0
oglft/: OGLFT.cpp  OGLFT.h
shader/: .gitignore  2d_sprite_shader.frag  2d_sprite_shader.vert  ambient_light_shader.frag  ambient_lighting_base.frag  ambient_lighting_shader.frag  color_shader.frag  color_shader.vert  cube_env_shader.vert  cube_map_blur_shader.frag  cube_map_reflection_shader.frag  cube_map_reflection_shader.vert  default_face_shader.frag  depth_pass_shader.frag  depth_pass_shader.vert  directional_light_shader.frag  directional_lighting_shader.frag  directional_shadow_blur_shader.frag  directional_shadow_blur_shader.vert  directional_shadow_shader.frag  directional_shadow_shader.vert  face_shader.frag  face_shader.vert  fog_shader.frag  fog_shader.vert  geometry_pass_shader.frag  geometry_pass_shader.vert  imgui_shader.frag  imgui_shader.vert  light_pass_shader.frag  light_pass_shader.vert  light_pass_temp.frag  lighting.glsl  lighting_shader.frag  no_op_shader.frag  no_op_shader.vert  particle_deferred_shader.frag  particle_deferred_shader.geom  particle_deferred_shader.vert  particle_shader.frag  (+26 more)
src/: 2d_renderer.cpp  2d_sprite_shader.cpp  aabb.cpp  ambient_lighting_shader.cpp  animation.cpp  asset.cpp  boundingbox.cpp  buffers.cpp  bullet_debug_object.cpp  camera.cpp  character_controller.cpp  color_shader.cpp  cube_env_shader.cpp  cube_map_blur_shader.cpp  cube_map_reflection.cpp  cube_map_reflection_shader.cpp  culling.cpp  default_deferred_renderer.cpp  default_face_shader.cpp  default_forward_renderer.cpp  default_renderer.cpp  deferred_renderer.cpp  depth_pass_shader.cpp  directional_light.cpp  directional_light_shader.cpp  directional_light_shadow.cpp  directional_lighting_shader.cpp  directional_shadow_shader.cpp  engine.cpp  entity.cpp  envmap.cpp  face_shader.cpp  fog_shader.cpp  forward_renderer.cpp  gbuffer.cpp  geometry_pass_shader.cpp  heightmap.cpp  light.cpp  light_pass_shader.cpp  lighting_shader.cpp  (+64 more)
swig/: CMakeLists.txt  matrix3_swig.h  towerengine.i  vector2_swig.h  vector_swig.h
